# nexus-hyperintelligence

./: .gitignore  Dockerfile.render  LICENSE  LinkedIn_Testing_and_Publishing_Plan.doc  Nexus.sln  README.md  build_output.txt  docker-compose.yml  render.yaml  setup.ps1  setup_infra.ps1  setup_infrastructure.ps1
.github/workflows/: deploy-render.yml
ci/github-actions/: build.yml  docker-build.yml  sdk-dotnet.yml  (+9 more)
scripts/: deploy_render.sh  generate_agents.py  generate_connectors.py  get_render_secrets.sh  health_check.py  seed_all.py  setup_ollama.sh  test_ai_modes.py  test_online.py  validate_local.py
vscode-extension/: package.json
wasm-agents/: Cargo.toml
wasm-agents/agents/agent_001/: Cargo.toml
wasm-agents/agents/agent_001/src/: lib.rs
wasm-agents/agents/agent_002/: Cargo.toml
wasm-agents/agents/agent_002/src/: lib.rs
wasm-agents/agents/agent_003/: Cargo.toml
wasm-agents/agents/agent_003/src/: lib.rs
wasm-agents/agents/agent_004/: Cargo.toml
wasm-agents/agents/agent_004/src/: lib.rs
wasm-agents/agents/agent_005/: Cargo.toml
wasm-agents/agents/agent_005/src/: lib.rs
wasm-agents/agents/agent_006/: Cargo.toml
wasm-agents/agents/agent_006/src/: lib.rs
wasm-agents/agents/agent_007/: Cargo.toml
wasm-agents/agents/agent_007/src/: lib.rs
wasm-agents/agents/agent_008/: Cargo.toml
wasm-agents/agents/agent_008/src/: lib.rs
wasm-agents/agents/agent_009/: Cargo.toml
wasm-agents/agents/agent_009/src/: lib.rs
wasm-agents/agents/agent_010/: Cargo.toml
wasm-agents/agents/agent_010/src/: lib.rs
wasm-agents/loader/: go.mod  main.go
(+114 files in other folders)
